# blk360_scanner_ros2

./: .gitignore  README.md
docs/: ammr_twin_metrics.md  ammr_twin_runbook.md  claude_chat_context.md  isaac_phase4_runbook.md
docs/raaicon2026/: raaicon2026_scan2sim.tex
outputs_thesis/journal/: .gitignore  captions.md
scripts/: ablation.sh  ammr_net_check.sh  ammr_pose_mock.py  build_occ_from_e57.py  build_testroom_map.py  cmdvel_isolation.sh  e57_setup_inspect.sh  e57_to_map.py  introspect.sh  isaacsim_ammr_teleop.py  isaacsim_ammr_twin.py  isaacsim_phase4_setup.py  kill_all.sh  metrics.py  nav2_goal_test.sh  occ_to_usd_world.py  occ_to_world.py  render_journal_figs.py  render_mapping_figs.py  render_testroom_field.py  run_4scan.sh  run_cc_stats.sh  run_dist.sh  run_e57_to_map.sh  run_field_nruns.sh  run_isaac_ammr.sh  run_mr_compare.sh  run_mr_stats.sh  run_mr_vis.sh  run_sota_stats.sh  run_testroom_field.sh  run_testroom_field2.sh  run_vis.sh  run_vis_R5.sh  run_vis_R6.sh  run_vis_cc.sh  seal_testroom.py  sim_smoke_test.sh  skip_decision_ablation.py  skip_rule_3way.py  (+5 more)
src/ammr_description/urdf/: ammr.urdf
src/blk360_bringup/: CMakeLists.txt  package.xml
src/blk360_bringup/config/cartographer/: cartographer_2d.lua
src/blk360_bringup/config/frontier/: frontier_params.yaml
src/blk360_bringup/config/nav2/: nav2_params.yaml
src/blk360_bringup/launch/: active_mapping.launch.py  cartographer.launch.py  exploration.launch.py  nav2.launch.py  tb3_sim.launch.py  testroom_sim.launch.py
src/blk360_bringup/maps/: testroom.pgm  testroom_gt.pgm  testroom_gt.yaml  testroom_meta.npz  testroom_open.pgm  testroom_open.yaml
src/blk360_bringup/rviz/: exploration.rviz
src/blk360_bringup/worlds/: testroom.world  testroom_field.world  testroom_multiroom.world
src/blk360_scanner/: CMakeLists.txt  package.xml
src/blk360_scanner/include/blk360_scanner/: PC.hxx
src/blk360_scanner/launch/: scan.launch.py
src/blk360_scanner/src/: scan_node.cpp
src/blk360_stop_scan/: package.xml  setup.cfg  setup.py
src/blk360_stop_scan/blk360_stop_scan/: exploration_monitor.py  mock_blk360_scanner.py  stop_scan_sequencer.py  visibility.py
src/blk360_stop_scan/config/: stop_scan.yaml
src/blk360_stop_scan/launch/: stop_scan.launch.py
src/frontier_exploration_ros2/: CMakeLists.txt  README.md  VENDOR_INFO.txt
src/frontier_exploration_ros2/config/: params.yaml
src/frontier_exploration_ros2/launch/: frontier_explorer.launch.py
src/frontier_exploration_ros2/src/: mrtsp_ordering.cpp
